# PyAnalytica

./: .gitignore  BADM576_AnalyticsWorkbench_v4.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pyanalytica/: __init__.py  __main__.py
src/pyanalytica/ai/: __init__.py  _llm.py  challenge.py  interpret.py  query.py  suggest.py
src/pyanalytica/analyze/: __init__.py  correlation.py  means.py  normality.py  proportions.py
src/pyanalytica/core/: __init__.py  codegen.py  config.py  extensions.py  model_store.py  procedure.py  profile.py  report_builder.py  session.py  state.py  theme.py  types.py
src/pyanalytica/data/: __init__.py  combine.py  export.py  load.py  profile.py  transform.py  view.py
src/pyanalytica/datasets/: __init__.py  generate.py
src/pyanalytica/datasets/diamonds/: diamonds.csv
src/pyanalytica/datasets/jobmatch/: candidates.csv  companies.csv  events.csv  jobs.csv
src/pyanalytica/datasets/tips/: tips.csv
src/pyanalytica/explore/: __init__.py  crosstab.py  pivot.py  simulate.py  summarize.py
src/pyanalytica/homework/: __init__.py  grader.py  loader.py  schema.py  submission.py
src/pyanalytica/model/: __init__.py  classify.py  cluster.py  cross_validate.py  evaluate.py  predict.py  reduce.py  regression.py
src/pyanalytica/report/: __init__.py  export.py  notebook.py
src/pyanalytica/themes/: __init__.py  default.py  gies.py  minimal.py
src/pyanalytica/ui/: __init__.py  app.py
src/pyanalytica/visualize/: __init__.py  compare.py  correlate.py  distribute.py  relate.py  timeline.py
tests/: __init__.py  conftest.py  test_e2e.py
tests/test_ai/: test_ai.py
tests/test_analyze/: __init__.py  test_correlation.py  test_means.py  test_normality.py  test_proportions.py
tests/test_core/: test_add_to_report.py  test_codegen.py  test_config.py  test_extensions.py  test_model_store.py  test_procedure.py  test_profile.py  test_report_builder.py  test_session.py  test_state.py  test_types.py
tests/test_data/: test_combine.py  test_export.py  test_load.py  test_profile.py  test_transform.py  test_view.py
tests/test_explore/: __init__.py  test_crosstab.py  test_pivot.py  test_simulate.py  test_summarize.py
tests/test_homework/: __init__.py  test_homework.py
tests/test_model/: __init__.py  test_classify.py  test_cluster.py  test_cross_validate.py  test_evaluate.py  test_predict.py  test_reduce.py  test_regression.py
tests/test_report/: __init__.py  test_report.py
tests/test_visualize/: __init__.py  test_compare.py  test_correlate.py  test_distribute.py  test_relate.py  test_timeline.py
(+49 files in other folders)
