[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyanalytica"
version = "0.1.0"
description = "A Python analytics workbench for teaching data science"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ashish Khandelwal" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "shiny>=1.0",
    "htmltools>=0.5",
]

[project.optional-dependencies]
ai = ["anthropic>=0.20"]
report = ["jinja2>=3.1", "nbformat>=5.9"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "playwright>=1.40"]

[project.scripts]
pyanalytica = "pyanalytica.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyanalytica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
