[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyanalytica"
version = "0.1.0"
description = "A Python analytics workbench for teaching data science"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ashish Khandelwal" }]
keywords = ["analytics", "data-science", "education", "shiny", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "shiny>=1.0",
    "htmltools>=0.5",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/social-engineer-ai/PyAnalytica"
Repository = "https://github.com/social-engineer-ai/PyAnalytica"
Issues = "https://github.com/social-engineer-ai/PyAnalytica/issues"

[project.optional-dependencies]
ai = ["anthropic>=0.20"]
report = ["nbformat>=5.9"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "playwright>=1.40"]
all = ["anthropic>=0.20", "nbformat>=5.9"]

[project.scripts]
pyanalytica = "pyanalytica.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyanalytica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
